--- a/MicroServiceEcoSystem/HealthMonitoringMicroService/packages.config
+++ b/MicroServiceEcoSystem/HealthMonitoringMicroService/packages.config
@@ -6,12 +6,17 @@
   <package id="CircuitBreaker.Net" version="0.7.0" targetFramework="net471" />
   <package id="CodeContracts" version="1.0.5680.18392" targetFramework="net471" />
   <package id="EasyNetQ" version="2.3.3" targetFramework="net471" />
+  <package id="Grumpy.Common" version="3.0.18" targetFramework="net461" />
+  <package id="Grumpy.Json" version="3.0.5" targetFramework="net461" />
+  <package id="Grumpy.Logging" version="3.0.3" targetFramework="net461" />
+  <package id="Grumpy.ServiceBase" version="3.0.3" targetFramework="net461" />
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net471" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net471" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net471" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net471" />
-  <package id="Topshelf" version="4.0.4" targetFramework="net471" />
+  <package id="Topshelf" version="4.2.1" targetFramework="net461" />
   <package id="Topshelf.Autofac" version="3.1.1" targetFramework="net471" />
 </packages>
